--- a/projects/blue/Tanghin in Minecraft/documentation.html
+++ b/projects/blue/Tanghin in Minecraft/documentation.html
@@ -1,77 +1,33 @@
-<style>
-scroll-padding-top: 6rem;
+<nav id="navbar-example3" class="navbar navbar-light bg-light flex-column align-items-stretch p-3">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <nav class="nav nav-pills flex-column">
+    <a class="nav-link" href="#item-1">Item 1</a>
+    <nav class="nav nav-pills flex-column">
+      <a class="nav-link ms-3 my-1" href="#item-1-1">Item 1-1</a>
+      <a class="nav-link ms-3 my-1" href="#item-1-2">Item 1-2</a>
+    </nav>
+    <a class="nav-link" href="#item-2">Item 2</a>
+    <a class="nav-link" href="#item-3">Item 3</a>
+    <nav class="nav nav-pills flex-column">
+      <a class="nav-link ms-3 my-1" href="#item-3-1">Item 3-1</a>
+      <a class="nav-link ms-3 my-1" href="#item-3-2">Item 3-2</a>
+    </nav>
+  </nav>
+</nav>
 
-ol {
-  list-style-type: none;
-  counter-reset: item;
-  margin: 0;
-  padding: 0;
-}
-
-ol > li {
-  display: table;
-  counter-increment: item;
-  margin-bottom: 0.6em;
-}
-
-ol > li:before {
-  content: counters(item, ".") ". ";
-  display: table-cell;
-  padding-right: 0.6em;    
-}
-
-li ol > li {
-  margin: 0;
-}
-
-li ol > li:before {
-  content: counters(item, ".") " ";
-}
-</style>
-<ol>
-  <li>
-      <a class="fw-bold" href="#1&doc=Transport">Transport</a>
-	  <ol>
-		<li><a href="#1&doc=Lift">Lift</a></li>
-		<li><a href="#1&doc=Bus">Bus</a></li>
-	  </ol>
-  </li>
-  <li>
-      <a class="fw-bold" href="#1&doc=Transport">Transport</a>
-	  <ol>
-		<li><a href="#1&doc=Lift">Lift</a></li>
-		<li><a href="#1&doc=Bus">Bus</a></li>
-	  </ol>
-  </li>
-  <li>
-      <a class="fw-bold" href="#1&doc=Transport">Transport</a>
-	  <ol>
-		<li><a href="#1&doc=Lift">Lift</a></li>
-		<li><a href="#1&doc=Bus">Bus</a></li>
-	  </ol>
-  </li>
-</ol>
-
-<h2 id="1&doc=Transport">Transport</h2>
-<hr>
-<h3 id="1&doc=Lift">Lift</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tempus egestas sed sed risus. Diam donec adipiscing tristique risus nec. Morbi tempus iaculis urna id. Amet est placerat in egestas erat imperdiet. Pellentesque habitant morbi tristique senectus et netus et. Tortor posuere ac ut consequat semper. Sit amet facilisis magna etiam tempor orci eu. Aliquet nec ullamcorper sit amet risus. Ac orci phasellus egestas tellus rutrum tellus. Id volutpat lacus laoreet non curabitur gravida.
-
-Quis vel eros donec ac odio tempor. Amet purus gravida quis blandit. Feugiat sed lectus vestibulum mattis ullamcorper velit sed. Aliquet nibh praesent tristique magna sit amet purus. Aliquet risus feugiat in ante metus dictum. Morbi tristique senectus et netus et malesuada fames ac turpis. Aliquet nec ullamcorper sit amet. Nisl suscipit adipiscing bibendum est ultricies integer quis. Nunc pulvinar sapien et ligula ullamcorper malesuada. Proin libero nunc consequat interdum varius sit. Ac ut consequat semper viverra nam libero justo. Mauris cursus mattis molestie a iaculis at erat pellentesque adipiscing. Id cursus metus aliquam eleifend. Id nibh tortor id aliquet lectus proin nibh nisl condimentum. Arcu vitae elementum curabitur vitae nunc sed velit dignissim. Dictum at tempor commodo ullamcorper a lacus vestibulum sed arcu. Vulputate enim nulla aliquet porttitor lacus. Sed pulvinar proin gravida hendrerit. Sit amet volutpat consequat mauris nunc congue. Volutpat commodo sed egestas egestas fringilla.
-
-Sed risus ultricies tristique nulla aliquet enim tortor. Purus gravida quis blandit turpis cursus in. At auctor urna nunc id cursus metus aliquam eleifend mi. Mauris rhoncus aenean vel elit scelerisque mauris. Tincidunt augue interdum velit euismod in pellentesque massa placerat duis. Velit sed ullamcorper morbi tincidunt ornare massa eget egestas. Quisque id diam vel quam. In tellus integer feugiat scelerisque varius morbi enim nunc faucibus. Eu non diam phasellus vestibulum lorem sed risus ultricies. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. Nisl tincidunt eget nullam non nisi est sit amet facilisis. Nec tincidunt praesent semper feugiat nibh sed pulvinar. Nibh sed pulvinar proin gravida hendrerit. Sagittis vitae et leo duis ut. Integer vitae justo eget magna fermentum iaculis. Quam quisque id diam vel quam elementum. Cursus sit amet dictum sit amet justo donec enim diam. Nullam non nisi est sit.
-
-Pellentesque habitant morbi tristique senectus et. Malesuada fames ac turpis egestas sed. Aliquet bibendum enim facilisis gravida neque convallis. Semper eget duis at tellus at. Faucibus nisl tincidunt eget nullam non nisi. Fusce ut placerat orci nulla. Id velit ut tortor pretium viverra suspendisse potenti nullam. Sed euismod nisi porta lorem mollis. Massa eget egestas purus viverra accumsan. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean. Condimentum id venenatis a condimentum vitae sapien pellentesque habitant. Mauris vitae ultricies leo integer. Lobortis scelerisque fermentum dui faucibus in ornare quam viverra. Sodales ut etiam sit amet. At risus viverra adipiscing at in tellus integer feugiat scelerisque. Rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant.
-
-Nullam non nisi est sit amet facilisis magna etiam tempor. Tempus imperdiet nulla malesuada pellentesque elit eget gravida. Quam lacus suspendisse faucibus interdum. Vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare massa. Arcu non odio euismod lacinia at quis risus sed. Lorem ipsum dolor sit amet consectetur adipiscing elit duis. Quis viverra nibh cras pulvinar mattis nunc sed blandit libero. Pharetra et ultrices neque ornare aenean euismod elementum nisi. Eget lorem dolor sed viverra ipsum nunc aliquet bibendum. Pellentesque adipiscing commodo elit at. Turpis cursus in hac habitasse platea dictumst. Phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. Turpis egestas maecenas pharetra convallis posuere. Nec feugiat in fermentum posuere urna nec. A cras semper auctor neque. At imperdiet dui accumsan sit amet nulla. Dui vivamus arcu felis bibendum ut tristique et egestas.</p>
-<br>
-<h3 id="1&doc=Bus">Bus</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tempus egestas sed sed risus. Diam donec adipiscing tristique risus nec. Morbi tempus iaculis urna id. Amet est placerat in egestas erat imperdiet. Pellentesque habitant morbi tristique senectus et netus et. Tortor posuere ac ut consequat semper. Sit amet facilisis magna etiam tempor orci eu. Aliquet nec ullamcorper sit amet risus. Ac orci phasellus egestas tellus rutrum tellus. Id volutpat lacus laoreet non curabitur gravida.
-
-Quis vel eros donec ac odio tempor. Amet purus gravida quis blandit. Feugiat sed lectus vestibulum mattis ullamcorper velit sed. Aliquet nibh praesent tristique magna sit amet purus. Aliquet risus feugiat in ante metus dictum. Morbi tristique senectus et netus et malesuada fames ac turpis. Aliquet nec ullamcorper sit amet. Nisl suscipit adipiscing bibendum est ultricies integer quis. Nunc pulvinar sapien et ligula ullamcorper malesuada. Proin libero nunc consequat interdum varius sit. Ac ut consequat semper viverra nam libero justo. Mauris cursus mattis molestie a iaculis at erat pellentesque adipiscing. Id cursus metus aliquam eleifend. Id nibh tortor id aliquet lectus proin nibh nisl condimentum. Arcu vitae elementum curabitur vitae nunc sed velit dignissim. Dictum at tempor commodo ullamcorper a lacus vestibulum sed arcu. Vulputate enim nulla aliquet porttitor lacus. Sed pulvinar proin gravida hendrerit. Sit amet volutpat consequat mauris nunc congue. Volutpat commodo sed egestas egestas fringilla.
-
-Sed risus ultricies tristique nulla aliquet enim tortor. Purus gravida quis blandit turpis cursus in. At auctor urna nunc id cursus metus aliquam eleifend mi. Mauris rhoncus aenean vel elit scelerisque mauris. Tincidunt augue interdum velit euismod in pellentesque massa placerat duis. Velit sed ullamcorper morbi tincidunt ornare massa eget egestas. Quisque id diam vel quam. In tellus integer feugiat scelerisque varius morbi enim nunc faucibus. Eu non diam phasellus vestibulum lorem sed risus ultricies. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. Nisl tincidunt eget nullam non nisi est sit amet facilisis. Nec tincidunt praesent semper feugiat nibh sed pulvinar. Nibh sed pulvinar proin gravida hendrerit. Sagittis vitae et leo duis ut. Integer vitae justo eget magna fermentum iaculis. Quam quisque id diam vel quam elementum. Cursus sit amet dictum sit amet justo donec enim diam. Nullam non nisi est sit.
-
-Pellentesque habitant morbi tristique senectus et. Malesuada fames ac turpis egestas sed. Aliquet bibendum enim facilisis gravida neque convallis. Semper eget duis at tellus at. Faucibus nisl tincidunt eget nullam non nisi. Fusce ut placerat orci nulla. Id velit ut tortor pretium viverra suspendisse potenti nullam. Sed euismod nisi porta lorem mollis. Massa eget egestas purus viverra accumsan. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean. Condimentum id venenatis a condimentum vitae sapien pellentesque habitant. Mauris vitae ultricies leo integer. Lobortis scelerisque fermentum dui faucibus in ornare quam viverra. Sodales ut etiam sit amet. At risus viverra adipiscing at in tellus integer feugiat scelerisque. Rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant.
-
-Nullam non nisi est sit amet facilisis magna etiam tempor. Tempus imperdiet nulla malesuada pellentesque elit eget gravida. Quam lacus suspendisse faucibus interdum. Vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare massa. Arcu non odio euismod lacinia at quis risus sed. Lorem ipsum dolor sit amet consectetur adipiscing elit duis. Quis viverra nibh cras pulvinar mattis nunc sed blandit libero. Pharetra et ultrices neque ornare aenean euismod elementum nisi. Eget lorem dolor sed viverra ipsum nunc aliquet bibendum. Pellentesque adipiscing commodo elit at. Turpis cursus in hac habitasse platea dictumst. Phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. Turpis egestas maecenas pharetra convallis posuere. Nec feugiat in fermentum posuere urna nec. A cras semper auctor neque. At imperdiet dui accumsan sit amet nulla. Dui vivamus arcu felis bibendum ut tristique et egestas.</p>
+<div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-offset="0" tabindex="0">
+  <h4 id="item-1">Item 1</h4>
+  <p>...</p>
+  <h5 id="item-1-1">Item 1-1</h5>
+  <p>...</p>
+  <h5 id="item-1-2">Item 1-2</h5>
+  <p>...</p>
+  <h4 id="item-2">Item 2</h4>
+  <p>...</p>
+  <h4 id="item-3">Item 3</h4>
+  <p>...</p>
+  <h5 id="item-3-1">Item 3-1</h5>
+  <p>...</p>
+  <h5 id="item-3-2">Item 3-2</h5>
+  <p>...</p>
+</div>
