--- a/projects/blue/Tanghin in Minecraft/documentation.html
+++ b/projects/blue/Tanghin in Minecraft/documentation.html
@@ -1,10 +1,5 @@
-<style>
-.split {
-	grid-template-columns: max-content auto;
-}
-</style>
-<div class="split" style="position: sticky; top: 3rem;">
-	<nav class="navbar navbar-light bg-light flex-column align-items-stretch p-3">
+<div class="row">
+	<nav class="navbar navbar-light bg-light flex-column align-items-stretch p-3 col-3" style="position: sticky; top: 3rem;">
 	  <a class="navbar-brand" href="#1">Contents</a>
 	  <nav class="nav nav-pills flex-column">
 		<a class="nav-link" href="#1&Transport">Transport</a>
@@ -21,7 +16,7 @@
 	  </nav>
 	</nav>
 
-	<div data-bs-spy="scroll" data-bs-offset="0" tabindex="0">
+	<div class="col-7" data-bs-spy="scroll" data-bs-offset="0" tabindex="0">
 	  <h4 id="item-1">Item 1</h4>
 	  <p>...</p>
 	  <h5 id="item-1-1">Item 1-1</h5>
