--- a/projects/blue/Tanghin in Minecraft/documentation.html
+++ b/projects/blue/Tanghin in Minecraft/documentation.html
@@ -1,3 +1,8 @@
+<style>
+.navbar {
+  justify-content: flex-start !important;
+}
+</style>
 <div class="row">
 	<nav class="navbar navbar-light bg-light flex-column align-items-stretch p-3 col-3" style="position: sticky; top: 3rem;">
 	  <a class="navbar-brand" href="#1">Contents</a>
