--- a/projects/blue/Tanghin in Minecraft/documentation.html
+++ b/projects/blue/Tanghin in Minecraft/documentation.html
@@ -1,38 +1,38 @@
 <style>
 .navbar {
-  justify-content: flex-start !important;
+  display: block !important;
 }
 </style>
 <div class="row">
 	<nav class="navbar navbar-light bg-light flex-column align-items-stretch p-3 col-3" style="position: sticky; top: 3rem;">
-	  <a class="navbar-brand" href="#1">Contents</a>
+	  <a class="navbar-brand">Contents</a>
 	  <nav class="nav nav-pills flex-column">
 		<a class="nav-link" href="#1&Transport">Transport</a>
 		<nav class="nav nav-pills flex-column">
-		  <a class="nav-link ms-3 my-1" href="#item-1-1">Item 1-1</a>
-		  <a class="nav-link ms-3 my-1" href="#item-1-2">Item 1-2</a>
+		  <a class="nav-link ms-4 my-1" href="#item-1-1">Item 1-1</a>
+		  <a class="nav-link ms-4 my-1" href="#item-1-2">Item 1-2</a>
 		</nav>
 		<a class="nav-link" href="#item-2">Item 2</a>
 		<a class="nav-link" href="#item-3">Item 3</a>
 		<nav class="nav nav-pills flex-column">
-		  <a class="nav-link ms-3 my-1" href="#item-3-1">Item 3-1</a>
-		  <a class="nav-link ms-3 my-1" href="#item-3-2">Item 3-2</a>
+		  <a class="nav-link ms-4 my-1" href="#item-3-1">Item 3-1</a>
+		  <a class="nav-link ms-4 my-1" href="#item-3-2">Item 3-2</a>
 		</nav>
 	  </nav>
 	</nav>
 
 	<div class="col-7" data-bs-spy="scroll" data-bs-offset="0" tabindex="0">
-	  <h4 id="item-1">Item 1</h4>
+	  <h2 id="1&Transport">Transport</h2>
 	  <p>...</p>
-	  <h5 id="item-1-1">Item 1-1</h5>
+	  <h3 id="item-1-1">Item 1-1</h3>
 	  <p>...</p>
-	  <h5 id="item-1-2">Item 1-2</h5>
+	  <h3 id="item-1-2">Item 1-2</h3>
 	  <p>...</p>
-	  <h4 id="item-2">Item 2</h4>
+	  <h2 id="item-2">Item 2</h2>
 	  <p>...</p>
-	  <h4 id="item-3">Item 3</h4>
+	  <h2 id="item-3">Item 3</h2>
 	  <p>...</p>
-	  <h5 id="item-3-1">Item 3-1</h5>
+	  <h3 id="item-3-1">Item 3-1</h3>
 	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Etiam dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Iaculis eu non diam phasellus vestibulum lorem. Morbi tristique senectus et netus et. Vitae justo eget magna fermentum iaculis eu non diam. Nec ullamcorper sit amet risus nullam eget felis eget nunc. Non sodales neque sodales ut etiam sit. Ut enim blandit volutpat maecenas volutpat blandit. Fringilla urna porttitor rhoncus dolor purus non enim praesent elementum. Faucibus pulvinar elementum integer enim neque volutpat ac. Amet luctus venenatis lectus magna fringilla urna porttitor rhoncus. Cursus sit amet dictum sit. Tristique senectus et netus et malesuada fames ac turpis egestas. Dolor sit amet consectetur adipiscing. Ligula ullamcorper malesuada proin libero nunc consequat interdum varius. Nisi quis eleifend quam adipiscing. Sagittis orci a scelerisque purus semper eget. Pretium quam vulputate dignissim suspendisse in est ante in nibh.
 
 Euismod nisi porta lorem mollis aliquam ut. Id consectetur purus ut faucibus pulvinar elementum integer. A pellentesque sit amet porttitor eget. Aliquet nec ullamcorper sit amet risus. Laoreet suspendisse interdum consectetur libero id faucibus. Vel facilisis volutpat est velit. Elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Ultricies leo integer malesuada nunc. Et malesuada fames ac turpis egestas sed tempus. Sem et tortor consequat id porta nibh venenatis. Leo urna molestie at elementum eu. Placerat vestibulum lectus mauris ultrices eros in. At varius vel pharetra vel turpis. Sollicitudin aliquam ultrices sagittis orci. Enim sed faucibus turpis in eu. Cras tincidunt lobortis feugiat vivamus at augue eget arcu dictum. Mi ipsum faucibus vitae aliquet nec ullamcorper. Euismod elementum nisi quis eleifend. Morbi leo urna molestie at elementum eu facilisis sed odio. Elementum nisi quis eleifend quam adipiscing.
@@ -42,7 +42,7 @@ Faucibus et molestie ac feugiat sed lectus. Mattis vulputate enim nulla aliquet 
 Quam vulputate dignissim suspendisse in est ante in. Massa vitae tortor condimentum lacinia quis. Interdum velit laoreet id donec ultrices tincidunt. Id donec ultrices tincidunt arcu non sodales neque sodales. Orci dapibus ultrices in iaculis nunc sed augue. Porta non pulvinar neque laoreet suspendisse. Id interdum velit laoreet id donec ultrices tincidunt arcu non. Tempor orci dapibus ultrices in iaculis nunc sed augue. Proin sagittis nisl rhoncus mattis rhoncus urna. Morbi quis commodo odio aenean. Enim blandit volutpat maecenas volutpat blandit aliquam etiam. Viverra aliquet eget sit amet tellus cras adipiscing enim eu. Dictum at tempor commodo ullamcorper a lacus vestibulum sed arcu. Consequat id porta nibh venenatis cras sed felis eget velit. Habitant morbi tristique senectus et netus et malesuada. At erat pellentesque adipiscing commodo. Risus ultricies tristique nulla aliquet enim.
 
 Sit amet risus nullam eget felis. Eget lorem dolor sed viverra ipsum nunc. Gravida quis blandit turpis cursus. Gravida cum sociis natoque penatibus. Cras fermentum odio eu feugiat pretium nibh ipsum consequat nisl. Adipiscing bibendum est ultricies integer. Id porta nibh venenatis cras sed felis eget velit aliquet. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Etiam sit amet nisl purus in mollis nunc sed. Consequat interdum varius sit amet mattis vulputate enim nulla aliquet. Sed risus ultricies tristique nulla aliquet. Mattis enim ut tellus elementum sagittis. Sed tempus urna et pharetra pharetra massa massa. Praesent tristique magna sit amet. Leo vel orci porta non. Arcu bibendum at varius vel pharetra. Amet nisl purus in mollis nunc sed id semper. Arcu vitae elementum curabitur vitae nunc sed velit. Massa tincidunt nunc pulvinar sapien et ligula ullamcorper malesuada. Placerat orci nulla pellentesque dignissim enim sit amet venenatis.</p>
-	  <h5 id="item-3-2">Item 3-2</h5>
+	  <h3 id="item-3-2">Item 3-2</h3>
 	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Etiam dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Iaculis eu non diam phasellus vestibulum lorem. Morbi tristique senectus et netus et. Vitae justo eget magna fermentum iaculis eu non diam. Nec ullamcorper sit amet risus nullam eget felis eget nunc. Non sodales neque sodales ut etiam sit. Ut enim blandit volutpat maecenas volutpat blandit. Fringilla urna porttitor rhoncus dolor purus non enim praesent elementum. Faucibus pulvinar elementum integer enim neque volutpat ac. Amet luctus venenatis lectus magna fringilla urna porttitor rhoncus. Cursus sit amet dictum sit. Tristique senectus et netus et malesuada fames ac turpis egestas. Dolor sit amet consectetur adipiscing. Ligula ullamcorper malesuada proin libero nunc consequat interdum varius. Nisi quis eleifend quam adipiscing. Sagittis orci a scelerisque purus semper eget. Pretium quam vulputate dignissim suspendisse in est ante in nibh.
 
 Euismod nisi porta lorem mollis aliquam ut. Id consectetur purus ut faucibus pulvinar elementum integer. A pellentesque sit amet porttitor eget. Aliquet nec ullamcorper sit amet risus. Laoreet suspendisse interdum consectetur libero id faucibus. Vel facilisis volutpat est velit. Elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Ultricies leo integer malesuada nunc. Et malesuada fames ac turpis egestas sed tempus. Sem et tortor consequat id porta nibh venenatis. Leo urna molestie at elementum eu. Placerat vestibulum lectus mauris ultrices eros in. At varius vel pharetra vel turpis. Sollicitudin aliquam ultrices sagittis orci. Enim sed faucibus turpis in eu. Cras tincidunt lobortis feugiat vivamus at augue eget arcu dictum. Mi ipsum faucibus vitae aliquet nec ullamcorper. Euismod elementum nisi quis eleifend. Morbi leo urna molestie at elementum eu facilisis sed odio. Elementum nisi quis eleifend quam adipiscing.
