--- a/projects/blue/Tanghin in Minecraft/documentation.html
+++ b/projects/blue/Tanghin in Minecraft/documentation.html
@@ -1,4 +1,8 @@
 <style>
+html {
+  scroll-padding-top: 3rem;
+}
+
 .navbar {
   display: block !important;
 }
@@ -10,7 +14,7 @@ if(!(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navig
 }
 </script>
 <div class="row">
-	<nav class="navbar navbar-light bg-light flex-column align-items-stretch p-3" id="contents" style="position: sticky; top: 3rem;">
+	<nav class="navbar navbar-light bg-light flex-column align-items-stretch p-3" id="contents">
 	  <a class="navbar-brand">Contents</a>
 	  <nav class="nav nav-pills flex-column">
 		<a class="nav-link" href="#1&Transport">Transport</a>
@@ -34,16 +38,16 @@ if(!(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navig
 	  <hr>
 	  <p>...</p>
 	  <br>
-	  <h3 id="#1&Lift">Lift</h3>
+	  <h3 id="1&Lift">Lift</h3>
 	  <p>...</p>
 	  <br>
-	  <h3 id="#1&Train">Train</h3>
+	  <h3 id="1&Train">Train</h3>
 	  <p>...</p>
 	  <br>
-	  <h3 id="#1&Bus">Bus</h3>
+	  <h3 id="1&Bus">Bus</h3>
 	  <p>...</p>
 	  <br>
-	  <h2 id="#1&Scaling">Scaling</h2>
+	  <h2 id="1&Scaling">Scaling</h2>
 	  <hr>
 	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Etiam dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Iaculis eu non diam phasellus vestibulum lorem. Morbi tristique senectus et netus et. Vitae justo eget magna fermentum iaculis eu non diam. Nec ullamcorper sit amet risus nullam eget felis eget nunc. Non sodales neque sodales ut etiam sit. Ut enim blandit volutpat maecenas volutpat blandit. Fringilla urna porttitor rhoncus dolor purus non enim praesent elementum. Faucibus pulvinar elementum integer enim neque volutpat ac. Amet luctus venenatis lectus magna fringilla urna porttitor rhoncus. Cursus sit amet dictum sit. Tristique senectus et netus et malesuada fames ac turpis egestas. Dolor sit amet consectetur adipiscing. Ligula ullamcorper malesuada proin libero nunc consequat interdum varius. Nisi quis eleifend quam adipiscing. Sagittis orci a scelerisque purus semper eget. Pretium quam vulputate dignissim suspendisse in est ante in nibh.
 
