--- a/projects/blue/Tanghin in Minecraft/documentation.html
+++ b/projects/blue/Tanghin in Minecraft/documentation.html
@@ -17,19 +17,13 @@ if(!(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navig
 	<nav class="navbar navbar-light bg-light flex-column align-items-stretch p-3" id="contents">
 	  <a class="navbar-brand">Contents</a>
 	  <nav class="nav nav-pills flex-column">
-		<a class="nav-link" href="#1&Transport">Transport</a>
+		<a class="nav-link" href="#1&Transport">1. Transport</a>
 		<nav class="nav nav-pills flex-column">
-		  <a class="nav-link ms-4 my-1" href="#1&Lift">Lift</a>
-		  <a class="nav-link ms-4 my-1" href="#1&Train">Train</a>
-		  <a class="nav-link ms-4 my-1" href="#1&Bus">Bus</a>
+		  <a class="nav-link ms-4 my-1" href="#1&Lift">1.1 Lift</a>
+		  <a class="nav-link ms-4 my-1" href="#1&Train">1.2 Train</a>
+		  <a class="nav-link ms-4 my-1" href="#1&Bus">1.3 Bus</a>
 		</nav>
-		<a class="nav-link" href="#1&Scaling">Scaling</a>
-		<a class="nav-link" href="#1&Transport">Transport</a>
-		<nav class="nav nav-pills flex-column">
-		  <a class="nav-link ms-4 my-1" href="#1&Lift">Lift</a>
-		  <a class="nav-link ms-4 my-1" href="#1&Train">Train</a>
-		  <a class="nav-link ms-4 my-1" href="#1&Bus">Bus</a>
-		</nav>
+		<a class="nav-link" href="#1&Scaling">2. Scaling</a>
 	  </nav>
 	</nav>
 
