--- a/projects/blue/view.html
+++ b/projects/blue/view.html
@@ -162,9 +162,9 @@
 			
 			<script>
 				if (!(window.location.hash.substring(1).includes("&"))) {
-					window.onload = function {
+					window.onload = function() {
 						document.getElementById("nav-overview-tab").click();
-					};
+					}
 				}
 				var File = new XMLHttpRequest();
 				var content;
