--- a/projects/blue/view.html
+++ b/projects/blue/view.html
@@ -164,9 +164,7 @@
 				if (window.location.hash.substring(1).includes("&")) {
 					window.onload = function() {
 						document.getElementById("nav-documentation-tab").click();
-						var dummy = window.location.hash.substring(1);
-						window.location.hash = window.location.hash.substring(1).split("&")[0];
-						window.location.hash = dummy;
+						window.location.hash = window.location.hash.substring(1),true;
 					}
 				}
 				var File = new XMLHttpRequest();
