--- a/projects/blue/view.html
+++ b/projects/blue/view.html
@@ -162,11 +162,12 @@
 			
 			<script>
 				if (window.location.hash.substring(1).includes("&")) {
+					document.getElementById("nav-documentation-tab").click();
 					window.onload = function() {
-						document.getElementById("nav-documentation-tab").click();
-						window.location.hash = window.location.hash.substring(1),true;
+						window.location.hash = window.location.hash.substring(1);
 					}
 				}
+				
 				var File = new XMLHttpRequest();
 				var content;
 				File.open("GET", "./database.txt", false);
