--- a/projects/blue/view.html
+++ b/projects/blue/view.html
@@ -162,12 +162,13 @@
 			
 			<script>
 				if (window.location.hash.substring(1).includes("&")) {
-					document.getElementById("nav-documentation-tab").click();
 					window.onload = function() {
-						window.location.hash = window.location.hash.substring(1);
+						document.getElementById("nav-documentation-tab").click();
+						window.onload = function() {
+							window.location.hash = window.location.hash.substring(1),true;
+						}
 					}
 				}
-				
 				var File = new XMLHttpRequest();
 				var content;
 				File.open("GET", "./database.txt", false);
