--- a/projects/blue/view.html
+++ b/projects/blue/view.html
@@ -164,9 +164,9 @@
 				if (window.location.hash.substring(1).includes("&")) {
 					window.onload = function() {
 						document.getElementById("nav-documentation-tab").click();
-						window.onload = function() {
-							window.location.hash = window.location.hash.substring(1),true;
-						}
+						setTimeout(function(){ 
+							window.location.hash = window.location.hash.substring(1);
+						}, 1000);
 					}
 				}
 				var File = new XMLHttpRequest();
