--- a/about.html
+++ b/about.html
@@ -96,11 +96,11 @@
 			<div class="container">
 				<h2>What is Project Georgia all about?</h2>
 				<hr>
-				<p>It is a huge project code-named Georgia. As I have interests in several topics, like making animations, writing mobile apps, and making an actual film, I decided to pack all of my goals and turn them into an enormous project. There is a final goal for the project though, which is to create an actual AI which is called Georgia and can act like a human. Fingers crossed.</p>
+				<p>Georgia is the codename for a massive project. Because I am interested in a variety of topics, including animation, mobile app development, and filmmaking, I decided to combine all of my ambitions into one massive project. The project's ultimate goal, however, is to create an actual AI named Georgia that can act like a human. Keeping my fingers crossed.</p>
 				<br>
 				<h2>Why is it called "Project Georgia"?</h2>
 				<hr>
-				<p>Long story short, I was having my first Unity project (which was an epic fail) back when I was 16. I searched through the Internet trying to get a unique name for my character in the game, and the name Georgia came up so I decided to use it. It was never used in any of my projects so I used it for this huge project.</p>
+				<p>To cut a long story short, when I was 16, I was working on my first Unity project (which was a colossal failure). I was looking for a unique name for my character in the game and came across the name Georgia, so I decided to use it. It had never been used in any of my previous projects, so I decided to use it for this massive project.</p>
 			</div>
 		</main>
 		
