--- a/projects/blue/Tanghin in Minecraft/overview.html
+++ b/projects/blue/Tanghin in Minecraft/overview.html
@@ -46,6 +46,10 @@
 		</div>
 	</div>
 </div>
+<h2>Upcoming releases</h2>
+<hr>
+<p>The v3.0 version will be available before the end of 2023. There will be support for Minecraft Java Edition, as well as significant improvements to the entire map. Keep an eye out!</p>
+<br>
 <h2>What's new in v2.1</h2>
 <hr>
 <p>- New design of drinking fountain<br>- Alarm cycle extended to one minute<br>- Removal of construction marks<br>- Ability to switch on/off alarm</p>
