--- a/projects/blue/Tanghin in Minecraft/documentation.html
+++ b/projects/blue/Tanghin in Minecraft/documentation.html
@@ -9,35 +9,38 @@ html {
 </style>
 <script>
 if(!(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent))){
-    document.getElementById("contents").classList.add("col-3");
-    document.getElementById("article").classList.add("col-7");
+    document.getElementsByClassName("30%").classList.add("col-3");
+	document.getElementsByClassName("40%").classList.add("col-4");
+	document.getElementsByClassName("60%").classList.add("col-6");
+    document.getElementsByClassName("70%").classList.add("col-7");
 }
 </script>
 <div class="row">
-	<nav class="navbar navbar-light bg-light flex-column align-items-stretch p-3" id="contents">
+	<nav class="navbar navbar-light bg-light flex-column align-items-stretch p-3 30%">
 	  <a class="navbar-brand">Contents</a>
 	  <nav class="nav nav-pills flex-column">
 		<a class="nav-link" href="#1&Installation">1 Installation</a>
-		<a class="nav-link" href="#1&Transport">2 Transport</a>
+		<a class="nav-link" href="#1&Transportation">2 Transportation</a>
 		<nav class="nav nav-pills flex-column">
 		  <a class="nav-link ms-4 my-1" href="#1&Lift">2.1 Lift</a>
 		  <a class="nav-link ms-4 my-1" href="#1&Train">2.2 Train</a>
 		  <a class="nav-link ms-4 my-1" href="#1&Bus">2.3 Bus</a>
+		  <a class="nav-link ms-4 my-1" href="#1&Cable_car">2.4 Cable car</a>
 		</nav>
 		<a class="nav-link" href="#1&Measurement">3 Measurement</a>
 
 	  </nav>
 	</nav>
 
-	<div id="article" data-bs-spy="scroll" data-bs-offset="0" tabindex="0">
+	<div class="70%" data-bs-spy="scroll" data-bs-offset="0" tabindex="0">
 		<br>
 		<h2 id="1&Installation">Installation</h2>
 		<hr>
 		<p>Save the .mcworld file to your computer. When you open the file, Minecraft will automatically import it. If that doesn't work, try changing the file extension to.zip and manually importing it.</p>
 		<br>
-		<h2 id="1&Transport">Transport</h2>
+		<h2 id="1&Transportation">Transportation</h2>
 		<hr>
-		<p>...</p>
+		<p>All moving machines within the map are controlled by commands. In this section, we will show off some of previous modes of transportation that we have created.</p>
 		<br>
 		<h3 id="1&Lift">Lift</h3>
 		<p>...</p>
@@ -47,6 +50,25 @@ if(!(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navig
 		<br>
 		<h3 id="1&Bus">Bus</h3>
 		<p>...</p>
+		<br>
+		<h3 id="1&Cable_car">Cable car</h3>
+		<h4>1st Gen</h4>
+		<p>For the 1st Gen cable car, we used command blocks to make the ropes appear slimmer. However, the cable car's speed is very slow because all commands are executed on the cable car itself.</p>
+		<div class="row">
+			<img class="60%" src="cable_car_1st_gen.png">
+			<div class="40%">
+				<div class="progress" style="height: 2rem;">
+					<div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="4" aria-valuemin="0" aria-valuemax="5">Flexibility</div>
+				</div>
+				<div class="progress" style="height: 2rem;">
+					<div class="progress-bar bg-success" role="progressbar" style="width: 20%;" aria-valuenow="1" aria-valuemin="0" aria-valuemax="5">Space-saving</div>
+				</div>
+				<div class="progress" style="height: 2rem;">
+					<div class="progress-bar bg-warning" role="progressbar" style="width: 40%;" aria-valuenow="2" aria-valuemin="0" aria-valuemax="5">Speed</div>
+				</div>
+			</div>
+		</div>
+		<a class="btn btn-primary" href="cable_car_1st_gen.pdf">Flowchart (PDF)</a>
 		<br>
 		<h2 id="1&Measurement">Measurement</h2>
 		<hr>
