--- a/projects/blue/Tanghin in Minecraft/documentation.html
+++ b/projects/blue/Tanghin in Minecraft/documentation.html
@@ -9,10 +9,24 @@ html {
 </style>
 <script>
 if(!(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent))){
-    document.getElementsByClassName("30%").classList.add("col-3");
-	document.getElementsByClassName("40%").classList.add("col-4");
-	document.getElementsByClassName("60%").classList.add("col-6");
-    document.getElementsByClassName("70%").classList.add("col-7");
+	var colelement;
+	
+	colelement = document.getElementsByClassName("30%");
+	for (var i = 0; i < colelement.length; i++) {
+		colelement[i].className += "col-3";
+	}
+	colelement = document.getElementsByClassName("40%");
+	for (var i = 0; i < colelement.length; i++) {
+		colelement[i].className += "col-4";
+	}
+	colelement = document.getElementsByClassName("60%");
+	for (var i = 0; i < colelement.length; i++) {
+		colelement[i].className += "col-6";
+	}
+	colelement = document.getElementsByClassName("70%");
+	for (var i = 0; i < colelement.length; i++) {
+		colelement[i].className += "col-7";
+	}
 }
 </script>
 <div class="row">
@@ -55,7 +69,7 @@ if(!(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navig
 		<h4>1st Gen</h4>
 		<p>For the 1st Gen cable car, we used command blocks to make the ropes appear slimmer. However, the cable car's speed is very slow because all commands are executed on the cable car itself.</p>
 		<div class="row">
-			<img class="60%" src="cable_car_1st_gen.png">
+			<img class="60%" src="./Tanghin in Minecraft/cable_car_1st_gen.png">
 			<div class="40%">
 				<div class="progress" style="height: 2rem;">
 					<div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="4" aria-valuemin="0" aria-valuemax="5">Flexibility</div>
@@ -68,7 +82,7 @@ if(!(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navig
 				</div>
 			</div>
 		</div>
-		<a class="btn btn-primary" href="cable_car_1st_gen.pdf">Flowchart (PDF)</a>
+		<a class="btn btn-primary" href="./Tanghin in Minecraft/cable_car_1st_gen.pdf">Flowchart (PDF)</a>
 		<br>
 		<h2 id="1&Measurement">Measurement</h2>
 		<hr>
