--- a/projects/blue/Tanghin in Minecraft/documentation.html
+++ b/projects/blue/Tanghin in Minecraft/documentation.html
@@ -82,7 +82,7 @@ if(!(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navig
 				</div>
 			</div>
 		</div>
-		<a class="btn btn-primary" href="./Tanghin in Minecraft/cable_car_1st_gen.pdf">Flowchart (PDF)</a>
+		<a class="btn btn-primary" href="./Tanghin in Minecraft/cable_car_1st_gen.pdf" target="_blank">Flowchart (PDF)</a>
 		<br>
 		<h2 id="1&Measurement">Measurement</h2>
 		<hr>
