--- a/projects/blue/Tanghin in Minecraft/documentation.html
+++ b/projects/blue/Tanghin in Minecraft/documentation.html
@@ -71,14 +71,19 @@ if(!(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navig
 		<div class="row">
 			<img class="60%" src="./Tanghin in Minecraft/cable_car_1st_gen.png">
 			<div class="40%">
-				<div class="progress" style="height: 2rem;">
-					<div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="4" aria-valuemin="0" aria-valuemax="5">Flexibility</div>
+				Flexibility
+				<div class="progress">
+					<div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="4" aria-valuemin="0" aria-valuemax="5"></div>
 				</div>
-				<div class="progress" style="height: 2rem;">
-					<div class="progress-bar bg-success" role="progressbar" style="width: 20%;" aria-valuenow="1" aria-valuemin="0" aria-valuemax="5">Space-saving</div>
+				<br>
+				Space-saving
+				<div class="progress">
+					<div class="progress-bar bg-success" role="progressbar" style="width: 20%;" aria-valuenow="1" aria-valuemin="0" aria-valuemax="5"></div>
 				</div>
-				<div class="progress" style="height: 2rem;">
-					<div class="progress-bar bg-warning" role="progressbar" style="width: 40%;" aria-valuenow="2" aria-valuemin="0" aria-valuemax="5">Speed</div>
+				<br>
+				Speed
+				<div class="progress">
+					<div class="progress-bar bg-warning" role="progressbar" style="width: 40%;" aria-valuenow="2" aria-valuemin="0" aria-valuemax="5"></div>
 				</div>
 			</div>
 		</div>
