--- a/projects/blue/Tanghin in Minecraft/documentation.html
+++ b/projects/blue/Tanghin in Minecraft/documentation.html
@@ -19,6 +19,10 @@ if(!(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navig
 	for (var i = 0; i < colelement.length; i++) {
 		colelement[i].className += " col-7";
 	}
+	colelement = document.getElementsByClassName("80%");
+	for (var i = 0; i < colelement.length; i++) {
+		colelement[i].className += " col-8";
+	}
 }
 </script>
 <div class="row">
@@ -61,7 +65,7 @@ if(!(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navig
 		<h4>1st Gen</h4>
 		<p>For the 1st Gen cable car, we used command blocks to make the ropes appear slimmer. However, the cable car's speed is very slow because all commands are executed on the cable car itself.</p>
 		<div class="row">
-			<img class="70%" src="./Tanghin in Minecraft/cable_car_1st_gen.png">
+			<img class="80%" height="100%" src="./Tanghin in Minecraft/cable_car_1st_gen.png">
 			<div class="30%">
 				Flexibility
 				<div class="progress">
