--- a/projects/blue/Tanghin in Minecraft/documentation.html
+++ b/projects/blue/Tanghin in Minecraft/documentation.html
@@ -8,7 +8,7 @@ html {
 }
 </style>
 <script>
-if(!(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent))){
+if (window.matchMedia('(min-device-width: 992px)').matches){
 	var colelement;
 	
 	colelement = document.getElementsByClassName("30%");
@@ -85,6 +85,7 @@ if(!(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navig
 		</div>
 		<br>
 		<a class="btn btn-primary" href="./Tanghin in Minecraft/cable_car_1st_gen.pdf" target="_blank">Flowchart (PDF)</a>
+		<br>
 		<br>
 		<h2 id="1&Measurement">Measurement</h2>
 		<hr>
