--- a/projects/blue/Tanghin in Minecraft/documentation.html
+++ b/projects/blue/Tanghin in Minecraft/documentation.html
@@ -8,7 +8,7 @@ html {
 }
 </style>
 <script>
-if (window.matchMedia('(min-device-width: 992px)').matches){
+if(!(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent))){
 	var colelement;
 	
 	colelement = document.getElementsByClassName("30%");
