--- a/projects/blue/Tanghin in Minecraft/documentation.html
+++ b/projects/blue/Tanghin in Minecraft/documentation.html
@@ -84,8 +84,9 @@ if(!(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navig
 			</div>
 		</div>
 		<br>
-		Command used
-		<pre><code>/testfor
+		Command used:
+		<pre><code>
+		/testfor
 		/execute
 		/clone
 		/setblock
