--- a/projects/blue/Tanghin in Minecraft/documentation.html
+++ b/projects/blue/Tanghin in Minecraft/documentation.html
@@ -85,13 +85,12 @@ if(!(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navig
 		</div>
 		<br>
 		Command used:
-		<pre><code>
-		/testfor
-		/execute
-		/clone
-		/setblock
-		/testforblock
-		/title
+		<pre><code>/testfor
+/execute
+/clone
+/setblock
+/testforblock
+/title
 		</code></pre>
 		<br>
 		<a class="btn btn-primary" href="./Tanghin in Minecraft/cable_car_1st_gen.pdf" target="_blank">Flowchart (PDF)</a>
