--- a/projects/blue/Tanghin in Minecraft/documentation.html
+++ b/projects/blue/Tanghin in Minecraft/documentation.html
@@ -93,7 +93,8 @@ if(!(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navig
 /title
 		</code></pre>
 		<br>
-		<a class="btn btn-primary" href="./Tanghin in Minecraft/cable_car_1st_gen.pdf" target="_blank">Flowchart (PDF)</a>
+		Flowchart:
+		<img width="100%" src="./Tanghin in Minecraft/cable_car_1st_gen.svg">
 		<br>
 		<br>
 		<h2 id="1&Measurement">Measurement</h2>
