--- a/projects/blue/Tanghin in Minecraft/documentation.html
+++ b/projects/blue/Tanghin in Minecraft/documentation.html
@@ -93,8 +93,7 @@ if(!(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navig
 /clone
 /setblock
 /testforblock
-/title
-		</code></pre>
+/title</code></pre>
 		<h2 id="1&Measurement">Measurement</h2>
 		<hr>
 		<p>...</p>
