--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
 			<section class="container">
 				<h2>Email</h2>
 				<hr>
-				<a href="mailto:leungjimmy93@gmail.com">link</a>
+				<a href="mailto: projectgeorgia0.0@gmail.com">link</a>
 				<br>
 				<br>
 				<h2>Instagram</h2>
