--- a/about.html
+++ b/about.html
@@ -101,6 +101,10 @@
 				<h2>Why is it called "Project Georgia"?</h2>
 				<hr>
 				<p>To cut a long story short, when I was 16, I was working on my first Unity project (which was a colossal failure). I was looking for a unique name for my character in the game and came across the name Georgia, so I decided to use it. It had never been used in any of my previous projects, so I decided to use it for this massive project.</p>
+				<br>
+				<h2>Roadmap</h2>
+				<br>
+				<img width="100%" src="./img/roadmap.svg">
 			</div>
 		</main>
 		
